add sans-serif for fonts

--- a/redisinsight/ui/src/pages/home/components/DatabaseAlias/styles.module.scss
+++ b/redisinsight/ui/src/pages/home/components/DatabaseAlias/styles.module.scss
@@ -17,7 +17,7 @@
 }
 
 .input {
-  font: normal normal 500 20px/24px 'Graphik' !important;
+  font: normal normal 500 20px/24px 'Graphik', sans-serif !important;
   backface-visibility: hidden;
 }
 
@@ -28,7 +28,7 @@
   padding-left: 9px;
   padding-top: 4px;
   margin-bottom: 5px;
-  font: normal normal 500 20px/24px 'Graphik' !important;
+  font: normal normal 500 20px/24px 'Graphik', sans-serif !important;
 }
 
 .aliasText {
