--- a/redisinsight/ui/src/pages/workbench/components/enablement-area/EnablementArea/components/InternalLink/styles.module.scss
+++ b/redisinsight/ui/src/pages/workbench/components/enablement-area/EnablementArea/components/InternalLink/styles.module.scss
@@ -1,7 +1,7 @@
 .link {
   width: auto;
   white-space: nowrap;
-  font: normal normal normal 13px/30px Graphik;
+  font: normal normal normal 13px/30px Graphik, sans-serif;
   letter-spacing: -0.13px;
   font-weight: normal !important;
   & > button {
