--- a/redisinsight/ui/src/pages/workbench/components/enablement-area/EnablementArea/components/InternalPage/styles/_typography.scss
+++ b/redisinsight/ui/src/pages/workbench/components/enablement-area/EnablementArea/components/InternalPage/styles/_typography.scss
@@ -3,7 +3,7 @@
 
 h1, h2, h3, h4, h5, h6 {
   color: var(--euiColorGhost);
-  font: normal normal 500 14px/24px Graphik;
+  font: normal normal 500 14px/24px Graphik, sans-serif;
   margin-bottom: ($margin-size-pace * 3 + px);
   margin-top: ($margin-size-pace * 3 + px);
   letter-spacing: 0;
