--- a/redisinsight/ui/src/pages/workbench/components/enablement-area/EnablementArea/components/Group/styles.scss
+++ b/redisinsight/ui/src/pages/workbench/components/enablement-area/EnablementArea/components/Group/styles.scss
@@ -4,7 +4,7 @@
     border-bottom: 1px solid transparent;
     transition: border-color 0.2s ease-in-out;
     .group-header {
-      font: normal normal medium 11px/15px Graphik;
+      font: normal normal medium 11px/15px Graphik, sans-serif;
       letter-spacing: -0.12px;
       overflow: hidden;
       white-space: nowrap;
@@ -53,7 +53,7 @@
         max-height: 30px;
       }
       .euiListGroupItem__label {
-        font: normal normal normal 14px/20px Graphik;
+        font: normal normal normal 14px/20px Graphik, sans-serif;
         letter-spacing: -0.14px;
       }
     }
